# roc-toolkit

./: CMakeLists.txt
src/internal_modules/roc_address/: CMakeLists.txt
src/internal_modules/roc_audio/: CMakeLists.txt
src/internal_modules/roc_core/: CMakeLists.txt
src/internal_modules/roc_ctl/: CMakeLists.txt
src/internal_modules/roc_error/: CMakeLists.txt
src/internal_modules/roc_fec/: CMakeLists.txt
src/internal_modules/roc_netio/: CMakeLists.txt
src/internal_modules/roc_node/: CMakeLists.txt
src/internal_modules/roc_packet/: CMakeLists.txt
src/internal_modules/roc_pipeline/: CMakeLists.txt
src/internal_modules/roc_rtcp/: CMakeLists.txt
src/internal_modules/roc_rtp/: CMakeLists.txt
src/internal_modules/roc_sdp/: CMakeLists.txt
src/internal_modules/roc_sndio/: CMakeLists.txt
src/tests/roc_core/: CMakeLists.txt
src/tools/roc_send/: CMakeLists.txt
